// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ebay-dialog-flexible renders basic version 1`] = `
"<!--M#s0-->
<div id=\\"s0\\">
  <!--F#4-->
  <div class=\\"dialog flexible-dialog dialog--mask-fade\\" role=\\"dialog\\" data-ebayui id=\\"s0-4-0\\" hidden>
    <div role=\\"document\\" class=\\"dialog__window dialog__window--fade\\" id=\\"s0-4-0-window\\">
      <button class=\\"dialog__close\\" type=\\"button\\" id=\\"s0-4-0-close\\">
        <svg aria-hidden=\\"true\\" class=\\"icon icon--close\\" xmlns=\\"http://www.w3.org/2000/svg\\" focusable=\\"false\\" id=\\"s0-4-0-0\\">
          <defs id=\\"s0-4-0-0-defs\\">
            <symbol id=\\"icon-close\\" viewBox=\\"0 0 24 24\\">
              <path d=\\"M23.205 1.79L21.415 0l-9.813 9.812L1.79 0 0 1.79l9.812 9.812L0 21.415l1.79 1.789 9.812-9.811 9.813 9.811 1.79-1.789-9.813-9.813z\\"></path>
            </symbol>
          </defs>
          <use xlink:href=\\"#icon-close\\"></use>
        </svg>
      </button>
      <div class=\\"dialog__body\\" id=\\"s0-4-0-body\\">
        <!--F#1-->
        <div class=\\"ebay-dialog-content-wrapper\\"></div>
        <!--F/-->
      </div>
    </div>
  </div>
  <!--F/-->
</div>
<!--M/-->"
`;

exports[`ebay-dialog-flexible renders in open state 1`] = `
"<!--M#s0-->
<div id=\\"s0\\">
  <!--F#4-->
  <div class=\\"dialog flexible-dialog dialog--mask-fade\\" role=\\"dialog\\" data-ebayui id=\\"s0-4-0\\">
    <div role=\\"document\\" class=\\"dialog__window dialog__window--fade\\" id=\\"s0-4-0-window\\">
      <button class=\\"dialog__close\\" type=\\"button\\" id=\\"s0-4-0-close\\">
        <svg aria-hidden=\\"true\\" class=\\"icon icon--close\\" xmlns=\\"http://www.w3.org/2000/svg\\" focusable=\\"false\\" id=\\"s0-4-0-0\\">
          <defs id=\\"s0-4-0-0-defs\\">
            <symbol id=\\"icon-close\\" viewBox=\\"0 0 24 24\\">
              <path d=\\"M23.205 1.79L21.415 0l-9.813 9.812L1.79 0 0 1.79l9.812 9.812L0 21.415l1.79 1.789 9.812-9.811 9.813 9.811 1.79-1.789-9.813-9.813z\\"></path>
            </symbol>
          </defs>
          <use xlink:href=\\"#icon-close\\"></use>
        </svg>
      </button>
      <div class=\\"dialog__body\\" id=\\"s0-4-0-body\\">
        <!--F#1-->
        <div class=\\"ebay-dialog-content-wrapper\\"></div>
        <!--F/-->
      </div>
    </div>
  </div>
  <!--F/-->
</div>
<!--M/-->"
`;

exports[`ebay-dialog-flexible renders with a renderBody 1`] = `
"<!--M#s0-->
<div id=\\"s0\\">
  <!--F#4-->
  <div class=\\"dialog flexible-dialog dialog--mask-fade\\" role=\\"dialog\\" data-ebayui id=\\"s0-4-0\\" hidden>
    <div role=\\"document\\" class=\\"dialog__window dialog__window--fade\\" id=\\"s0-4-0-window\\">
      <button class=\\"dialog__close\\" type=\\"button\\" id=\\"s0-4-0-close\\">
        <svg aria-hidden=\\"true\\" class=\\"icon icon--close\\" xmlns=\\"http://www.w3.org/2000/svg\\" focusable=\\"false\\" id=\\"s0-4-0-0\\">
          <defs id=\\"s0-4-0-0-defs\\">
            <symbol id=\\"icon-close\\" viewBox=\\"0 0 24 24\\">
              <path d=\\"M23.205 1.79L21.415 0l-9.813 9.812L1.79 0 0 1.79l9.812 9.812L0 21.415l1.79 1.789 9.812-9.811 9.813 9.811 1.79-1.789-9.813-9.813z\\"></path>
            </symbol>
          </defs>
          <use xlink:href=\\"#icon-close\\"></use>
        </svg>
      </button>
      <div class=\\"dialog__body\\" id=\\"s0-4-0-body\\">
        <!--F#1-->
        <div class=\\"ebay-dialog-content-wrapper\\">
          <!--F#2-->Hello World
          <!--F/-->
        </div>
        <!--F/-->
      </div>
    </div>
  </div>
  <!--F/-->
</div>
<!--M/-->"
`;

exports[`ebay-dialog-flexible renders with a11y close text 1`] = `
"<!--M#s0-->
<div id=\\"s0\\">
  <!--F#4-->
  <div class=\\"dialog flexible-dialog dialog--mask-fade\\" role=\\"dialog\\" data-ebayui id=\\"s0-4-0\\" hidden>
    <div role=\\"document\\" class=\\"dialog__window dialog__window--fade\\" id=\\"s0-4-0-window\\">
      <button class=\\"dialog__close\\" type=\\"button\\" aria-label=\\"Close Dialog\\" id=\\"s0-4-0-close\\">
        <svg aria-hidden=\\"true\\" class=\\"icon icon--close\\" xmlns=\\"http://www.w3.org/2000/svg\\" focusable=\\"false\\" id=\\"s0-4-0-0\\">
          <defs id=\\"s0-4-0-0-defs\\">
            <symbol id=\\"icon-close\\" viewBox=\\"0 0 24 24\\">
              <path d=\\"M23.205 1.79L21.415 0l-9.813 9.812L1.79 0 0 1.79l9.812 9.812L0 21.415l1.79 1.789 9.812-9.811 9.813 9.811 1.79-1.789-9.813-9.813z\\"></path>
            </symbol>
          </defs>
          <use xlink:href=\\"#icon-close\\"></use>
        </svg>
      </button>
      <div class=\\"dialog__body\\" id=\\"s0-4-0-body\\">
        <!--F#1-->
        <div class=\\"ebay-dialog-content-wrapper\\"></div>
        <!--F/-->
      </div>
    </div>
  </div>
  <!--F/-->
</div>
<!--M/-->"
`;

exports[`ebay-dialog-flexible renders with default type 1`] = `
"<!--M#s0-->
<div id=\\"s0\\">
  <!--F#4-->
  <div class=\\"dialog flexible-dialog dialog--mask-fade\\" role=\\"dialog\\" data-ebayui id=\\"s0-4-0\\" hidden>
    <div role=\\"document\\" class=\\"dialog__window dialog__window--fade\\" id=\\"s0-4-0-window\\">
      <button class=\\"dialog__close\\" type=\\"button\\" id=\\"s0-4-0-close\\">
        <svg aria-hidden=\\"true\\" class=\\"icon icon--close\\" xmlns=\\"http://www.w3.org/2000/svg\\" focusable=\\"false\\" id=\\"s0-4-0-0\\">
          <defs id=\\"s0-4-0-0-defs\\">
            <symbol id=\\"icon-close\\" viewBox=\\"0 0 24 24\\">
              <path d=\\"M23.205 1.79L21.415 0l-9.813 9.812L1.79 0 0 1.79l9.812 9.812L0 21.415l1.79 1.789 9.812-9.811 9.813 9.811 1.79-1.789-9.813-9.813z\\"></path>
            </symbol>
          </defs>
          <use xlink:href=\\"#icon-close\\"></use>
        </svg>
      </button>
      <div class=\\"dialog__body\\" id=\\"s0-4-0-body\\">
        <!--F#1-->
        <div class=\\"ebay-dialog-content-wrapper\\"></div>
        <!--F/-->
      </div>
    </div>
  </div>
  <!--F/-->
</div>
<!--M/-->"
`;

exports[`ebay-dialog-flexible renders with flexible type 1`] = `
"<!--M#s0-->
<div id=\\"s0\\">
  <!--F#4-->
  <div class=\\"dialog flexible-dialog dialog--mask-fade\\" role=\\"dialog\\" data-ebayui id=\\"s0-4-0\\" hidden>
    <div role=\\"document\\" class=\\"dialog__window dialog__window--fade\\" id=\\"s0-4-0-window\\">
      <button class=\\"dialog__close\\" type=\\"button\\" id=\\"s0-4-0-close\\">
        <svg aria-hidden=\\"true\\" class=\\"icon icon--close\\" xmlns=\\"http://www.w3.org/2000/svg\\" focusable=\\"false\\" id=\\"s0-4-0-0\\">
          <defs id=\\"s0-4-0-0-defs\\">
            <symbol id=\\"icon-close\\" viewBox=\\"0 0 24 24\\">
              <path d=\\"M23.205 1.79L21.415 0l-9.813 9.812L1.79 0 0 1.79l9.812 9.812L0 21.415l1.79 1.789 9.812-9.811 9.813 9.811 1.79-1.789-9.813-9.813z\\"></path>
            </symbol>
          </defs>
          <use xlink:href=\\"#icon-close\\"></use>
        </svg>
      </button>
      <div class=\\"dialog__body\\" id=\\"s0-4-0-body\\">
        <!--F#1-->
        <div class=\\"ebay-dialog-content-wrapper\\"></div>
        <!--F/-->
      </div>
    </div>
  </div>
  <!--F/-->
</div>
<!--M/-->"
`;

exports[`ebay-dialog-flexible renders with full type 1`] = `
"<!--M#s0-->
<div id=\\"s0\\">
  <!--F#4-->
  <div class=\\"dialog flexible-dialog dialog--no-mask\\" role=\\"dialog\\" data-ebayui id=\\"s0-4-0\\" hidden>
    <div role=\\"document\\" class=\\"dialog__window dialog__window--full dialog__window--fade\\" id=\\"s0-4-0-window\\">
      <button class=\\"dialog__close\\" type=\\"button\\" id=\\"s0-4-0-close\\">
        <svg aria-hidden=\\"true\\" class=\\"icon icon--close\\" xmlns=\\"http://www.w3.org/2000/svg\\" focusable=\\"false\\" id=\\"s0-4-0-0\\">
          <defs id=\\"s0-4-0-0-defs\\">
            <symbol id=\\"icon-close\\" viewBox=\\"0 0 24 24\\">
              <path d=\\"M23.205 1.79L21.415 0l-9.813 9.812L1.79 0 0 1.79l9.812 9.812L0 21.415l1.79 1.789 9.812-9.811 9.813 9.811 1.79-1.789-9.813-9.813z\\"></path>
            </symbol>
          </defs>
          <use xlink:href=\\"#icon-close\\"></use>
        </svg>
      </button>
      <div class=\\"dialog__body\\" id=\\"s0-4-0-body\\">
        <!--F#1-->
        <div class=\\"ebay-dialog-content-wrapper\\"></div>
        <!--F/-->
      </div>
    </div>
  </div>
  <!--F/-->
</div>
<!--M/-->"
`;

exports[`ebay-dialog-flexible renders with portal 1`] = `
"<!--M#s0-->
<div id=\\"s0\\"><span style=\\"display:none;\\"></span></div>
<!--M/-->"
`;
